Restructure appendix and some small changes

--- a/latex/appendix.tex
+++ b/latex/appendix.tex
@@ -1,17 +1,14 @@
-%-------------------------------
-%-------------------------------
-\chapter{PCA Daten}
-\label{appendix_pca}
-
 %----------------------------------------
-\section{Quellen und Abbildungen zur PCA}
+%----------------------------------------
+\chapter{Quellen und Abbildungen zur PCA}
+\label{appendix_pca}
 
 Alle Bilder, die als Eingabe für die PCA verwendet wurden, sind in Abbildung \ref{all_images} zu finden und ihre Quellen in Abschnitt \ref{picture_sources}. In Abschnitt \ref{appendix_pca_weight} sind die Quellen für die erhobenen Gewichte für jedes Beispiel aufgezählt. 
 Abbildungen \ref{input_data} und \ref{input_data_weight} zeigen die Verteilung aller erhobenen Merkmale und in den Abbildungen \ref{qq_diagrams_spine} und  \ref{qq_diagrams_rest} sind die zugehörigen Quantil-Quantil-Diagramme der kontinuierlichen Merkmale zu sehen.
 Einige Visualisierungen von Punkten im PCA-Koordinatensystem sind in Abbildung \ref{pca_results_sqrtEV} zu finden.
 
-%- - - - - - - - - 
-\subsection{Bildquellen}
+%--------------------
+\section{Bildquellen}
 \label{picture_sources}
  
  Alle Tiere, die nicht aufgezählt sind, sind aus \cite{Spezielle_Zoologie} entnommen.
@@ -97,8 +94,9 @@ Einige Visualisierungen von Punkten im PCA-Koordinatensystem sind in Abbildung \
 \end{figure}
 
 \clearpage
-\subsection{Quellen der Tiergewichte}
- \label{appendix_pca_weight}
+%---------------------------------
+\section{Quellen der Tiergewichte}
+\label{appendix_pca_weight}
  
  \begin{itemize}
   \item Afrikanischer Elefant 4000kg, \url{https://de.upali.ch/gewicht-und-grosse/}
@@ -304,10 +302,11 @@ Einige Visualisierungen von Punkten im PCA-Koordinatensystem sind in Abbildung \
    \caption{Datenpunkte im PCA-Koordinatensystem. Eine Koordinate nimmt den Wert der positiven (+) \bzw negativen (-) Standardabweichung in die entsprechende Richtung an, alle anderen sind null. Von oben nach unten sind die Ergebnisse für den größten (1) bis zum sechstgrößten (6) Eigenwert dargestellt. \emph{Beine} steht für \emph{Beine mit Bodenkontakt}.}
    \label{pca_results_sqrtEV}
   \end{figure}
-
-\clearpage  
-%-----------------------------------------------
-\section{Quellen für die verwendeten 3D-Modelle}
+  
+  
+%-------------------------------------------  
+%-------------------------------------------
+\chapter{Quellen der 3D-Modelle der Knochen}
 \label{model_sources}
 
 \begin{itemize}
