--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -39,7 +39,7 @@
  title={Multivariate Statistics},
  subtitle = {A Vector Space Approach},
  author={Eaton, Morris L.},
- isbn={9780940600690},
+ isbn={978-0-940600-69-0},
  series={Lecture Notes-Monograph Series},
  url={https://epdf.pub/multivariate-statistics-a-vector-space-approacheed2a525dca43e48f58a88b289ff519f66368.html},
  year={1983},
@@ -77,7 +77,6 @@
  title = {Computational Modeling for the Computer Animation of Legged Figures},
  volume = {19},
  booktitle = {ACM Siggraph Computer Graphics},
- doi = {10.1145/325334.325244},
  url = {https://dl.acm.org/doi/10.1145/325334.325244}
 }
 
