--- a/latex/skeleton_generation.tex
+++ b/latex/skeleton_generation.tex
@@ -456,7 +456,7 @@ Ein solcher Schultergürtel wirkt aber nur sinnvoll, wenn der Hals lang genug is
 \section{Knochenmodelle}
 \label{bone_models}
 
-Um ein 3D-Modell des gesamten Skeletts zu erstellen, wird zunächst jeder terminale Knochen als Quader dargestellt. Diese Quader ergeben sich aus Position, Orientierung und Abmessungen des zugehörigen Knochens. Alle Quader zusammen ergeben ein rudimentäres Modell (siehe Abbildung \ref{4legs_boxes}). Jedoch lassen sie sich auch relativ leicht durch feinere 3D-Modelle der entsprechenden Knochen ersetzen. Die Quellen für alle Modelle, die vom Algorithmus verwendet werden sind im Anhang \ref{model_sources} zu finden.
+Um ein 3D-Modell des gesamten Skeletts zu erstellen, wird zunächst jeder terminale Knochen als Quader dargestellt. Diese Quader ergeben sich aus Position, Orientierung und Abmessungen des zugehörigen Knochens. Alle Quader zusammen ergeben ein rudimentäres Modell (siehe Abbildung \ref{4legs_boxes}). Jedoch lassen sie sich auch relativ leicht durch feinere 3D-Modelle der entsprechenden Knochen ersetzen. Die Quellen für alle Modelle, die vom Algorithmus verwendet werden sind in Anhang \ref{model_sources} zu finden.
 
 \begin{figure}
  \centering
