add link to github repo

--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -1,4 +1,10 @@
 
+@online{repo,
+ title = {skeleton-generation},
+ subtitle = {Der Programmcode und alle anderen Daten dieses Projekts},
+ url = {https://github.com/Zimmt/skeleton-generation/settings},
+}
+
 @online{background,
  title = {HDRI Haven},
  subtitle = {{$360^\circ$}-Bild einer kleinen Höhle},
