--- a/latex/implementation_detail.tex
+++ b/latex/implementation_detail.tex
@@ -3,6 +3,8 @@
 \chapter{Implementierungsdetails}
 \label{chapter:implementation_detail}
 
+Der Programmcode und alle anderen zugehörigen Daten sind im Github Repository \cite{repo} zu finden.
+
 Die Laufzeit des Algorithmus wurde auf einem Acer Aspire E5 Laptop mit einem Intel Core \mbox{i5-4210U} Prozessor mit zwei Kernen gemessen. Verwendet wurde die Programmiersprache Java, Version $11$, ohne Parallelisierung. Es wurden jeweils von $1000$ Durchläufen die Zeit gemessen und davon der Durchschnitt berechnet. Damit ergeben sich folgende Laufzeiten:
 \begin{itemize}
  \item Einlesen der $44$ Beispiele für die PCA: $111$ms
